<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/alarms_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/fragment_title_alarms"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentLow"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noAlarms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/alarms_fragment_noAlarms"
        android:textAlignment="center"
        android:textColor="#72FD7347"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/addAlarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textColor="#72FD7347"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:text="@string/alarms_fragment_noAlarmsJoke" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_alarms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/alarms_title"
        android:visibility="visible"
        tools:listitem="@layout/item_alarm" />

    <ImageButton
        android:id="@+id/imageButton"
        android:contentDescription="@string/NULL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_add_circle_black_24dp"
        android:background="#00FFFFFF"/>



</RelativeLayout>