<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_title_profile"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentLow"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/debtTextView_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="200dp"
        android:text="@string/profile_fragment_DEBT"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentLow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <TextView
        android:id="@+id/amountDebt_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/debtTextView_profile"
        android:text="@string/profile_fragment_TempDEBT"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentLow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/debtTextView_profile"
        app:layout_constraintStart_toEndOf="@+id/debtTextView_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>